...
        android:layout_marginTop="100dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarEntryDetailActivityCourse" />

    <EditText
        android:id="@+id/calendarEntryDetailActivityTitleSet"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
...
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calendarEntryDetailActivityTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/calendarEntryDetailActivityCourseSet"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
...
