<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calendar.CalendarEntryDetailsActivity">


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/calendarEntryDetailActivityPager"
        android:layout_width="414dp"
        android:layout_height="500dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calendarEntryDetailActivityDoneModifyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="95dp"
        android:layout_marginBottom="88dp"
        android:text="@string/calendarEntryDetailActivityModifyButton"
        android:windowSoftInputMode="stateUnchanged|adjustResize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarEntryDetailActivityPager" />
</androidx.constraintlayout.widget.ConstraintLayout>