...
    <string name="roomInfoNotOwnerToastMessage">"Only the owner can change settings"</string>

    <string name="calendarActivityTodayDateMyAppointments">Date</string>
    <string name="calendarActivityRefreshButton">Refresh</string>
    <string name="calendarActivityCreateAppointmentButton">Create</string>
    <string name="calendarEntryDescription">Description</string>
    <string name="calendarEntryDetailsButton">Details</string>
    <string name="calendarEntryDetailActivityModifyButton">Modify</string>
    <string name="calendarEntryDetailsActivityKickButton">Kick</string>
    <string name="calendarEntryDetailsActivityInviteButton">Add</string>
    <string name="calendarEntryDetailsActivityBanButton">Ban</string>
    <string name="calendarEntryDetailsActivityInviteHint">Who do you want to add?</string>
    <string name="calendarEntryDetailsActivityBanHint">Who do you want to ban?</string>
...
